# slkbuild

./: AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac
doc/: CHANGELOG  CHANGELOG-old  INSTALL  Makefile  Makefile.am  Makefile.in  TODO
etc/: Makefile  Makefile.am  Makefile.in  SLKBUILD  SLKBUILD.cmake  SLKBUILD.gconf  SLKBUILD.mateconf  SLKBUILD.meson  SLKBUILD.musl  SLKBUILD.perl  SLKBUILD.python  SLKBUILD.waf
man/: Makefile  Makefile.am  Makefile.in  SLKBUILD.5  SLKBUILD.t2t  slkbuild.8  slkbuild.8.in  slkbuild.t2t
scripts/: Makefile  Makefile.in  slkbuild.in
src/: Makefile.am  slkbuild
