#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(slkbuild, 0.7.1, vlahavas~at~gmail~dot~com)
AM_INIT_AUTOMAKE(slkbuild, 0.7.1)
AC_OUTPUT(Makefile doc/Makefile man/Makefile etc/Makefile scripts/Makefile)

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

#AC_CONFIG_FILES([src/Makefile])
AC_OUTPUT
